# miel-cicd

./: LICENSE  Makefile.toml  README.md  rust-toolchain.toml  style.css  tasks.toml  termynal.css
.github/: CONTRIBUTING.md  index.html  style.css  termynal.js
.github/ISSUE_TEMPLATE/: task-template.md
.github/pull_request_template/: documentation.md  feature.md
.github/workflows/: cd.yml  ci.yml  docs.yml  gh-pages.yml  release.yml  rustdoc.yml
api/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
api/miel/: all.html  fn.main.html  index.html
doc/: .markdownlint.json  development.md
doc/requirements/: requirements.md
doc/workflow/: bugfix.md  build.md  development.md  repository.md  team.md
docs/: index.html
docs/development/: ci_cd.md  setup.md
docs/requirements/: requirements.md  requirments.md
docs/research/: architecture.md  configuration_parser.md  honeypot_services.md
docs/technical/: choices.md
docs/workflow/: development.md  repository.md  team.md
scripts/: setup_markdown.sh  setup_node.sh  setup_rust.sh
src/core/: Cargo.toml  main.rs
src/core/src/: lib.rs  main.rs  network.rs  session_management.rs
src/core/src/configuration/: config.rs  types.rs
src/core/src/configuration_parser/: mod.rs
src/core/src/container_management/: types.rs
src/core/src/controller/: controller_handler.rs
src/core/src/error_handling/: types.rs
src/core/src/network/: connection_filter.rs  network_listener.rs  service_detector.rs  types.rs
src/core/src/session_management/: session_manager.rs
(+8 files in other folders)
