[package]
name = "miel"
version = "0.0.2"
edition = "2021"

[[bin]]
name = "miel"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
clap = { version = "4.5.46", features = ["derive", "env"] }
clap_builder = "4.5.46"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
tempfile = "3.21.0"
serial_test = "3.2.0"
tokio = { version = "1.47.1" , features = ["full", "test-util"] }
chrono = "0.4.41"
chrono-tz = "0.10.4"
tokio-test = "0.4.4"
